Add JDBC implementation for views.